--- a/cookbooks/consul-mysql-npm/templates/default/Vers.erb
+++ b/cookbooks/consul-mysql-npm/templates/default/Vers.erb
@@ -1,5 +1,5 @@
 #!/bin/bash
-if AWS_ACCESS_KEY_ID=<%=node["consul-mysql-npm"]["attr1"]["access_key"] %> AWS_SECRET_ACCESS_KEY=<%=node["consul-mysql-npm"]["attr1"]["secret_key"] %> sudo aws s3 cp s3://workshop-tf-state-nirg/ChuckNorrisAPP/  ~/project/ChuckNorrisAPP --recursive 
+if AWS_ACCESS_KEY_ID=<%=node["consul-mysql-npm"]["attr1"]["access_key"] %> AWS_SECRET_ACCESS_KEY=<%=node["consul-mysql-npm"]["attr1"]["secret_key"] %> aws s3 cp s3://workshop-tf-state-nirg/ChuckNorrisAPP/  ~/project/ChuckNorrisAPP --recursive 
   echo "Downloaded file: ChuckNorrisAPP"
 else
   echo "Failed to Download file:  ChuckNorrisAPP"
